# cerebrate

cerebrate/: TODO  configure
cerebrate/aci/: CircleLSQ.cpp  GUIHandler.hpp  Localizer.cpp  Localizer.hpp
cerebrate/blink/: blinkomat-test.rom  blinkomat-test2.rom  iocactus-test.blink
cerebrate/drivers/: FModTCP.hpp  cipdcmot.cpp  fmod_tcp.h
cerebrate/ibou/: Action.cpp
cerebrate/sfl/: Frame.hpp  Makefile.in  Polygon.cpp  Polygon.hpp  numeric.hpp
haiko/: COPYING  Makefile  Makefile.OBSD  Makefile.OSX  Makefile.am  cheshire.eff  effect.c  headbeat.eff  line.vox  seqbeam.eff  sit.vox  sit3.vox  teffect.c  tparse.c  voxel.c  voxel_tok.l  wrap_gl.h
htdocs/: cerebrate.css  index.html
tags/cerebrate-1.0/aci/: Cactus.hpp  GUIHandler.cpp  MotionManager.hpp  Odometry.cpp  Watchdog.cpp  testrandom.cpp
tags/cerebrate-1.0/drivers/: cfmod.cpp  ctcp.cpp  fmod_ipdcmot.h  fmod_util.h
tags/cerebrate-1.0/gfx/: Viewport.hpp
tags/cerebrate-1.0/ibou/: Action.hpp
tags/cerebrate-1.0/util/: testrandom.cpp
tags/cerebrate-1.1/aci/: Effects.hpp  Odometry.hpp  Scanalyzer.hpp  TODO
tags/cerebrate-1.1/blink/: example.blink
tags/cerebrate-1.1/drivers/: csick.cpp
tags/cerebrate-1.1/ibou/: rinks-test.ibou
tags/cerebrate-1.1/sfl/: Frame.cpp
tags/haiko-0.0rc0/: crosshair.vox  effect_tok.l  haiko.c  sit2.vox  tball.c  voxel.c  voxel.h  wrap_gl.h  wrap_glut.h
tags/haiko-0.0rc1/: build-stage.sh  configure.ac  haiko.c  seqhopp.eff
tags/haiko-0.0rc2/: Makefile.OSX  configure.ac  haiko.vox  lay.vox  seq.vox
tags/haiko-0.0rc3/: effect_parse.y  haiko.eff  lay2.vox  voxel.h  voxel_parse.y  wrap_glut.h
trunk/: Makefile.am  Makefile.in  configure  configure.ac
trunk-cerebrate/: Makefile.in  cerebrate.pc.in  cleanup.sh  configure.ac  control-blink-hibou.py
trunk-cerebrate/aci/: Behavior.hpp  Cactus.hpp  Makefile.in  Odometry.hpp  Timeout.cpp  Watchdog.hpp  bgmap
trunk-cerebrate/blink/: Blink.cpp  rc.blinkd
trunk-cerebrate/drivers/: FModIPDCMOT.cpp  FModIPDCMOT.hpp  ttcp.cpp
trunk-cerebrate/gfx/: Mousehandler.hpp  Subwindow.hpp  Viewport.cpp
trunk-cerebrate/sfl/: Line.hpp  Makefile.am
trunk-cerebrate/util/: tfork.cpp  thread.c
trunk/aci/: CircleLSQ.hpp  Effects.cpp  Localizer.hpp  Makefile.am  MotionManager.cpp  MotionManager.hpp  Scanalyzer.hpp  Timeout.hpp
trunk/blink/: Blink.cpp  Makefile.am  Makefile.in  blinkd.cpp
trunk/cerebrate/aci/: Behavior.cpp  Cactus.cpp  Scanalyzer.cpp  fernandez.cpp
trunk/cerebrate/blink/: Blink.hpp  blinkomat-test3.rom  blinkomat.circ  blinkomat2.circ  test.blink
trunk/cerebrate/drivers/: FModTCP.cpp  Makefile.am  fmod_ipdcmot.c  fmod_tcp.c  fmod_util.c
trunk/cerebrate/gfx/: Makefile.am
trunk/cerebrate/ibou/: Makefile.am  iboud.cpp
trunk/cerebrate/sfl/: Line.cpp  Point.hpp
trunk/cerebrate/util/: Random.cpp
trunk/drivers/: Makefile.in
trunk/gfx/: Makefile.in  Subwindow.cpp
trunk/haiko/: Makefile  Makefile.am  configure.ac  crosshair.conf  e1.conf  e2.conf  e3.conf  effect.c  effect.conf  effect.h  effect_tok.l  haiko.c  haiko.pc.in  hopp.eff  seq.conf  seq.eff  tball.c  tokenize.l  tparse.c  tpath.c  voxel.c  voxel.h  voxel_parse.y  voxel_tok.l  wrap_gl.c  wrap_gl.h  wrap_glut.h
trunk/ibou/: Makefile.in  example.ibou  rc.iboud
trunk/util/: Makefile.am  Makefile.in
