CPPFLAGS+= -I@abs_top_srcdir@

noinst_LTLIBRARIES= libsfl.la

libsfl_la_SOURCES=  Frame.cpp \
                    Line.cpp \
                    Point.cpp \
                    Polygon.cpp \
                    numeric.cpp

include_HEADERS=    Frame.hpp \
                    Line.hpp \
                    Point.hpp \
                    Polygon.hpp \
                    functors.hpp \
                    numeric.hpp \
                    pdebug.hpp

includedir= @includedir@/sfl
